Enable and configure basic auth

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,3 +2,9 @@ springdoc:
   api-docs:
     enabled: false
   version: '@springdoc.version@'
+
+idealista:
+  security:
+    username: idealistaUser
+    password: idealistaPassword
+    role: USER
