--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,14 @@ server:
   port: 8080
 
 idealista:
-  init:
-    enabled: true
   advertisement:
     irrelevant-score: 40
+  init:
+    enabled: true
+  security:
+    username: idealistaUser
+    password: idealistaPassword
+    role: USER
 
 springdoc:
   api-docs:
